--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-    <h1>Passei do cavalo</h1>
+    <h1>Passeio do cavalo</h1>
     <button onclick="reload()">Reiniciar</button>
     <footer>&copy;Edinelson Lima</footer>
 
